--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: "dpredkel/engin"
   branch: main
+  auth_type: implicit
+  app_id: "Ov23libkYeVZf8efXZVM"
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
