--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,6 @@
 backend:
-  name: github
-  repo: dpredkel/engin
+  name: git-gateway
   branch: main
-  base_url: https://netlify-cms-github-oauth-provider-pink.vercel.app
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
