--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,6 +5,9 @@ backend:
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
 
+site_url: "https://engin-by.netlify.app"
+display_url: "https://engin-by.netlify.app"
+
 collections:
   - name: "pages"
     label: "Pages"
