--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,6 +12,7 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
+      # About Page
       - label: "About Page"
         name: "about"
         file: "_data/about.yml"
@@ -26,5 +27,62 @@ collections:
             fields:
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Position", name: "position", widget: "string" }
+              - { label: "Image URL", name: "image_url", widget: "string" }
+      
+      # Contacts Page
+      - label: "Contacts Page"
+        name: "contacts"
+        file: "_data/contacts.yml"
+        fields:
+          - { label: "Organization Name", name: "organization", widget: "string" }
+          - { label: "Tax ID (УНП)", name: "tax_id", widget: "string" }
+          - { label: "Address", name: "address", widget: "string" }
+          - { label: "Phone", name: "phone", widget: "string" }
+          - { label: "Email", name: "email", widget: "string" }
+          - { label: "Working Hours", name: "working_hours", widget: "string" }
+          - { label: "Map URL", name: "map_url", widget: "string" }
+      
+      # Services Page
+      - label: "Services Page"
+        name: "services"
+        file: "_data/services.yml"
+        fields:
+          - label: "Services"
+            name: "services"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Image URL", name: "image_url", widget: "string" }
+      
+      # Projects Page
+      - label: "Projects Page"
+        name: "projects"
+        file: "_data/projects.yml"
+        fields:
+          - label: "Projects"
+            name: "projects"
+            widget: "list"
+            fields:
+              - { label: "Object Name", name: "object_name", widget: "string" }
+              - { label: "Location", name: "location", widget: "string" }
+              - { label: "Year", name: "year", widget: "string" }
+              - { label: "Task", name: "task", widget: "text" }
+              - { label: "Solution", name: "solution", widget: "text" }
+              - { label: "Result", name: "result", widget: "text" }
+              - { label: "Image URL", name: "image_url", widget: "string" }
+      
+      # Certifications Page
+      - label: "Certifications Page"
+        name: "certifications"
+        file: "_data/certifications.yml"
+        fields:
+          - label: "Certificates"
+            name: "certificates"
+            widget: "list"
+            fields:
+              - { label: "Certificate Name", name: "name", widget: "string" }
+              - { label: "Certificate Number", name: "number", widget: "string" }
+              - { label: "Valid Until", name: "valid_until", widget: "string" }
               - { label: "Image URL", name: "image_url", widget: "string" }
 
