Revert "perf(seo,ci,decap): canonical/meta, lazy images, editorial workflow, sitemap/robots, CI checks"
This reverts commit df6b4e099f2482637a3964e781fd2d4f76859beb.

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,8 +2,6 @@ backend:
   name: git-gateway
   branch: main
 
-publish_mode: editorial_workflow
-
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
 
@@ -29,10 +27,7 @@ collections:
             fields:
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Position", name: "position", widget: "string" }
-              - label: "Image URL"
-                name: "image_url"
-                widget: "string"
-                pattern: ["^https?://[^\\s]+$", "Введите корректный URL (https://...)"]
+              - { label: "Image URL", name: "image_url", widget: "string" }
       
       # Contacts Page
       - label: "Contacts Page"
@@ -45,10 +40,7 @@ collections:
           - { label: "Phone", name: "phone", widget: "string" }
           - { label: "Email", name: "email", widget: "string" }
           - { label: "Working Hours", name: "working_hours", widget: "string" }
-          - label: "Map URL"
-            name: "map_url"
-            widget: "string"
-            pattern: ["^https?://[^\\s]+$", "Введите корректный URL (https://...)"]
+          - { label: "Map URL", name: "map_url", widget: "string" }
       
       # Services Page
       - label: "Services Page"
@@ -61,10 +53,7 @@ collections:
             fields:
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
-              - label: "Image URL"
-                name: "image_url"
-                widget: "string"
-                pattern: ["^https?://[^\\s]+$", "Введите корректный URL (https://...)"]
+              - { label: "Image URL", name: "image_url", widget: "string" }
       
       # Projects Page
       - label: "Projects Page"
@@ -81,10 +70,7 @@ collections:
               - { label: "Task", name: "task", widget: "text" }
               - { label: "Solution", name: "solution", widget: "text" }
               - { label: "Result", name: "result", widget: "text" }
-              - label: "Image URL"
-                name: "image_url"
-                widget: "string"
-                pattern: ["^https?://[^\\s]+$", "Введите корректный URL (https://...)"]
+              - { label: "Image URL", name: "image_url", widget: "string" }
       
       # Certifications Page
       - label: "Certifications Page"
@@ -98,8 +84,5 @@ collections:
               - { label: "Certificate Name", name: "name", widget: "string" }
               - { label: "Certificate Number", name: "number", widget: "string" }
               - { label: "Valid Until", name: "valid_until", widget: "string" }
-              - label: "Image URL"
-                name: "image_url"
-                widget: "string"
-                pattern: ["^https?://[^\\s]+$", "Введите корректный URL (https://...)"]
+              - { label: "Image URL", name: "image_url", widget: "string" }
 
