--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@ projects:
     task: "Модернизация системы видеонаблюдения."
     solution: "Установка IP-камер высокого разрешения."
     result: "Повышение уровня безопасности на 90%."
-    image_url: "https://picsum.photos/800/450?random=1"
+    image_url: "https://picsum.photos/800/450"
   
   - object_name: "ЖК «Невский Бриз»"
     location: "г. Санкт-Петербург"
@@ -13,7 +13,7 @@ projects:
     task: "Интеграция СКУД и домофонии."
     solution: "IP-домофония с контролем доступа."
     result: "Единая система управления доступом."
-    image_url: "https://picsum.photos/800/450?random=2"
+    image_url: "https://picsum.photos/800/450"
   
   - object_name: "Завод «Технопром»"
     location: "г. Казань"
@@ -21,7 +21,7 @@ projects:
     task: "Организация пожарной сигнализации."
     solution: "Адресная система ОПС."
     result: "Соответствие нормам пожарной безопасности."
-    image_url: "https://picsum.photos/800/450?random=3"
+    image_url: "https://picsum.photos/800/450"
   
   - object_name: "ТРЦ «Сибирь»"
     location: "г. Новосибирск"
@@ -29,7 +29,7 @@ projects:
     task: "Комплексная система безопасности."
     solution: "Интеграция видеонаблюдения, СКУД и ОПС."
     result: "Централизованный мониторинг и управление."
-    image_url: "https://picsum.photos/800/450?random=4"
+    image_url: "https://picsum.photos/800/450"
   
   - object_name: "Университет УрФУ"
     location: "г. Екатеринбург"
@@ -37,7 +37,7 @@ projects:
     task: "Обеспечение безопасности корпусов."
     solution: "Контроль доступа в учебные аудитории."
     result: "Безопасная среда для студентов."
-    image_url: "https://picsum.photos/800/450?random=5"
+    image_url: "https://picsum.photos/800/450"
   
   - object_name: "Областная больница"
     location: "г. Нижний Новгород"
@@ -45,5 +45,4 @@ projects:
     task: "Контроль доступа в служебные помещения."
     solution: "Биометрические считыватели."
     result: "Защита материальных ценностей."
-    image_url: "https://picsum.photos/800/450?random=6"
-
+    image_url: "https://picsum.photos/800/450"
