--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -1,8 +1,7 @@
-organization: "ООО «Инжиниринг систем безопасности»"
-tax_id: "123456789"
-address: "г. Минск, ул. Примерная, 1, офис 101"
-phone: "+375 (29) 000-00-00"
-email: "info@securitysystems.com"
-working_hours: "Пн–Пт, 9:00–18:00"
-map_url: "https://maps.google.com/maps?q=%D0%9C%D0%B8%D0%BD%D1%81%D0%BA%20%D1%83%D0%BB.%20%D0%9F%D1%80%D0%B8%D0%BC%D0%B5%D1%80%D0%BD%D0%B0%D1%8F%201%20%D0%BE%D1%84%D0%B8%D1%81%20101&t=&z=15&ie=UTF8&iwloc=&output=embed"
-
+organization: ООО «Инжиниринг систем безопасности»
+tax_id: "691773203"
+address: г. Минск, ул. Ольшевского, 22, офис 610
+phone: тел./факс+375 (17) 2349980, тел.+375 (17) 2349980
+email: office@engin.by
+working_hours: Пн–Пт, 9:00–18:00
+map_url: /assets/images/uploads/место_ольшевского22.png
