--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,9 +1,15 @@
 company_title: О компании
-company_body: ООО «Инжиниринг систем безопасности». Проектирование, экспертиза и
-  сопровождение систем безопасности зданий. Работаем по СТБ/ГОСТ.
+company_body: >
+  ООО «Инжиниринг систем безопасности».
+
+  Осуществление функции Генпроектировщика, Проектирование разделов проектной документации;
+
+  Экспертная деятельность по обеспечению пожарной безопасности (выполнение всех видов пожарно-технических расчетов)
 experience_title: Наш опыт
-experience_body: 10 лет работы. Более 100 реализованных объектов. Сертификация
-  ISO 9001, лицензии МЧС.
+experience_body: Более 10 лет работы. Более 100 реализованных объектов.
+  Сертификация ISO 9001, аттестатация Министерства архитектуры и строительства
+  на проектную деятельность, лицензия МЧС на осуществление экспертной
+  деятельности и проектирования систем пожарной автоматики.
 team:
   - name: Алексей Петров
     position: Главный инженер
