Update Pages “projects”

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,48 +1,50 @@
 projects:
-  - object_name: "Бизнес-центр «Аврора»"
-    location: "г. Москва"
-    year: "2023"
-    task: "Модернизация системы видеонаблюдения."
-    solution: "Установка IP-камер высокого разрешения."
-    result: "Повышение уровня безопасности на 90%."
-    image_url: "https://picsum.photos/800/450"
-  
-  - object_name: "ЖК «Невский Бриз»"
-    location: "г. Санкт-Петербург"
+  - object_name: Многофункциональный комплекс
+    location: г. Минск, пр-т Победителей, 63Б
+    year: "2024"
+    task: "Проектирование систем противопожарной защиты здания "
+    solution: >-
+      Разработаны и внедрены : 
+
+      Адресная автоматическая система пожарной сигнализации и система оповещения и управления эвакуацией людей при пожаре.
+
+      Система вытяжной противодымной вентиляции при пожаре.
+
+      Автоматическая установка пожаротушения подземного паркинга.
+    result: Обеспечение требуемого уровня пожарной безопасности
+    image_url: https://picsum.photos/800/450
+  - object_name: ЖК «Невский Бриз»
+    location: г. Санкт-Петербург
     year: "2022"
-    task: "Интеграция СКУД и домофонии."
-    solution: "IP-домофония с контролем доступа."
-    result: "Единая система управления доступом."
-    image_url: "https://picsum.photos/800/450"
-  
-  - object_name: "Завод «Технопром»"
-    location: "г. Казань"
+    task: Интеграция СКУД и домофонии.
+    solution: IP-домофония с контролем доступа.
+    result: Единая система управления доступом.
+    image_url: https://picsum.photos/800/450
+  - object_name: Завод «Технопром»
+    location: г. Казань
     year: "2021"
-    task: "Организация пожарной сигнализации."
-    solution: "Адресная система ОПС."
-    result: "Соответствие нормам пожарной безопасности."
-    image_url: "https://picsum.photos/800/450"
-  
-  - object_name: "ТРЦ «Сибирь»"
-    location: "г. Новосибирск"
+    task: Организация пожарной сигнализации.
+    solution: Адресная система ОПС.
+    result: Соответствие нормам пожарной безопасности.
+    image_url: https://picsum.photos/800/450
+  - object_name: ТРЦ «Сибирь»
+    location: г. Новосибирск
     year: "2020"
-    task: "Комплексная система безопасности."
-    solution: "Интеграция видеонаблюдения, СКУД и ОПС."
-    result: "Централизованный мониторинг и управление."
-    image_url: "https://picsum.photos/800/450"
-  
-  - object_name: "Университет УрФУ"
-    location: "г. Екатеринбург"
+    task: Комплексная система безопасности.
+    solution: Интеграция видеонаблюдения, СКУД и ОПС.
+    result: Централизованный мониторинг и управление.
+    image_url: https://picsum.photos/800/450
+  - object_name: Университет УрФУ
+    location: г. Екатеринбург
     year: "2019"
-    task: "Обеспечение безопасности корпусов."
-    solution: "Контроль доступа в учебные аудитории."
-    result: "Безопасная среда для студентов."
-    image_url: "https://picsum.photos/800/450"
-  
-  - object_name: "Областная больница"
-    location: "г. Нижний Новгород"
+    task: Обеспечение безопасности корпусов.
+    solution: Контроль доступа в учебные аудитории.
+    result: Безопасная среда для студентов.
+    image_url: https://picsum.photos/800/450
+  - object_name: Областная больница
+    location: г. Нижний Новгород
     year: "2018"
-    task: "Контроль доступа в служебные помещения."
-    solution: "Биометрические считыватели."
-    result: "Защита материальных ценностей."
-    image_url: "https://picsum.photos/800/450"
+    task: Контроль доступа в служебные помещения.
+    solution: Биометрические считыватели.
+    result: Защита материальных ценностей.
+    image_url: https://picsum.photos/800/450
