--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,6 +12,100 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
+      # Home Page (Index)
+      - label: "Home Page"
+        name: "index"
+        file: "_data/index.yml"
+        fields:
+          - label: "Hero Section"
+            name: "hero"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Description", name: "description", widget: "text" }
+              - { label: "Primary CTA Text", name: "primary_cta_text", widget: "string" }
+              - { label: "Secondary CTA Text", name: "secondary_cta_text", widget: "string" }
+              - label: "Background Image"
+                name: "background_image"
+                widget: "image"
+                choose_url: true
+                allow_multiple: false
+          - label: "Services Preview"
+            name: "services_preview"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Subtitle", name: "subtitle", widget: "string" }
+              - label: "Services"
+                name: "services"
+                widget: "list"
+                fields:
+                  - { label: "Title", name: "title", widget: "string" }
+                  - { label: "Description", name: "description", widget: "text" }
+                  - label: "Image"
+                    name: "image_url"
+                    widget: "image"
+                    choose_url: true
+                    allow_multiple: false
+          - label: "Advantages"
+            name: "advantages"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Subtitle", name: "subtitle", widget: "string" }
+              - label: "Items"
+                name: "items"
+                widget: "list"
+                fields:
+                  - { label: "Title", name: "title", widget: "string" }
+          - label: "Projects Preview"
+            name: "projects_preview"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Subtitle", name: "subtitle", widget: "string" }
+              - label: "Projects"
+                name: "projects"
+                widget: "list"
+                fields:
+                  - { label: "Title", name: "title", widget: "string" }
+                  - { label: "Description", name: "description", widget: "text" }
+                  - label: "Image"
+                    name: "image_url"
+                    widget: "image"
+                    choose_url: true
+                    allow_multiple: false
+          - label: "Certificates & Partners"
+            name: "certificates_partners"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Subtitle", name: "subtitle", widget: "string" }
+              - label: "Logos"
+                name: "logos"
+                widget: "list"
+                fields:
+                  - label: "Logo Image"
+                    name: "image_url"
+                    widget: "image"
+                    choose_url: true
+                    allow_multiple: false
+          - label: "Contact Teaser"
+            name: "contact_teaser"
+            widget: "object"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Description", name: "description", widget: "string" }
+              - { label: "Address", name: "address", widget: "string" }
+              - { label: "Phone", name: "phone", widget: "string" }
+              - { label: "Email", name: "email", widget: "string" }
+              - { label: "CTA Text", name: "cta_text", widget: "string" }
+              - label: "Image"
+                name: "image_url"
+                widget: "image"
+                choose_url: true
+                allow_multiple: false
+      
       # About Page
       - label: "About Page"
         name: "about"
